--- a/.github/workflows/xunit-pipeline.yml
+++ b/.github/workflows/xunit-pipeline.yml
@@ -248,10 +248,13 @@ jobs:
     - name: Build project
       run: dotnet build -c ${{ env.CONFIG }}
 
+    - name: Ensure TestResults dir exists
+      run: mkdir -p "${{ github.workspace }}/${{ env.COVERLET_DIR }}"
+
     - name: Run XUnit Integration Tests
       uses: b3b00/coverlet-action@1.3.5-alpha2
       with:
-        testProject: ${{ env.M_XUNIT_PROJECT }}
+        testProject: '--project ${{ env.M_XUNIT_PROJECT }}'
         output: ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
         outputFormat: ${{ env.COVERAGE_FORMAT }}
         #threshold: ${{ env.COVERAGE_THRESHOLD }}
@@ -284,10 +287,13 @@ jobs:
     - name: Build project
       run: dotnet build -c ${{ env.CONFIG }}
 
+    - name: Ensure TestResults dir exists
+      run: mkdir -p "${{ github.workspace }}/${{ env.COVERLET_DIR }}"
+
     - name: Run XUnit Real Integration Tests
       uses: b3b00/coverlet-action@1.3.5-alpha2
       with:
-        testProject: ${{ env.M_RD_XUNIT_PROJECT }}
+        testProject: '--project ${{ env.M_RD_XUNIT_PROJECT }}'
         output: ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
         outputFormat: ${{ env.COVERAGE_FORMAT }}
         #threshold: ${{ env.COVERAGE_THRESHOLD }}
