--- a/.github/workflows/xunit-pipeline.yml
+++ b/.github/workflows/xunit-pipeline.yml
@@ -254,7 +254,7 @@ jobs:
     - name: Run XUnit Integration Tests
       uses: b3b00/coverlet-action@1.3.5-alpha2
       with:
-        testProject: '--project ${{ env.M_XUNIT_PROJECT }}'
+        testProject: '${{ env.M_XUNIT_PROJECT }}'
         output: ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
         outputFormat: ${{ env.COVERAGE_FORMAT }}
         #threshold: ${{ env.COVERAGE_THRESHOLD }}
