--- a/.github/workflows/xunit-pipeline.yml
+++ b/.github/workflows/xunit-pipeline.yml
@@ -293,7 +293,7 @@ jobs:
     - name: Run XUnit Real Integration Tests
       uses: b3b00/coverlet-action@1.3.5-alpha2
       with:
-        testProject: '--project ${{ env.M_RD_XUNIT_PROJECT }}'
+        testProject: '${{ env.M_RD_XUNIT_PROJECT }}'
         output: ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
         outputFormat: ${{ env.COVERAGE_FORMAT }}
         #threshold: ${{ env.COVERAGE_THRESHOLD }}
