--- a/.github/workflows/nunit-pipeline.yml
+++ b/.github/workflows/nunit-pipeline.yml
@@ -211,7 +211,7 @@ jobs:
             --results-directory "TestResults"
 
       - name: Run Template Tests
-        run: dotnet test -c ${{ env.CONFIG }} ${{ env.TT_PROJECT }}
+        run: dotnet run --project ${{ env.TT_PROJECT }} -- --treenode-filter '/*/*/*/*[Category=NUnit]'
 
       - name: Display structure of downloaded files
         run: ls -R
