--- a/.github/workflows/xunit3-pipeline.yml
+++ b/.github/workflows/xunit3-pipeline.yml
@@ -217,7 +217,7 @@ jobs:
        --results-directory "TestResults"
 
     - name: Run Template Tests
-      run: dotnet test -c ${{ env.CONFIG }} --filter "Group=XUnit3" ${{ env.TT_PROJECT }}
+      run: dotnet run --project ${{ env.TT_PROJECT }} -- --treenode-filter '/*/*/*/*[Category=XUnit3]'
 
     - name: Display structure of downloaded files
       run: ls -R
