run tunit template tests

--- a/.github/workflows/core-pipeline.yml
+++ b/.github/workflows/core-pipeline.yml
@@ -95,7 +95,7 @@ jobs:
        --results-directory "TestResults"
 
     - name: Run Template Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.TT_PROJECT }}
+      run: dotnet run --project ${{ env.TT_PROJECT }}
 
     - name: Display structure of downloaded files
       run: ls -R
