--- a/.github/workflows/nunit-pipeline-external.yml
+++ b/.github/workflows/nunit-pipeline-external.yml
@@ -216,9 +216,14 @@ jobs:
     needs: [detect-changes, nunit-external-tests, nunit-real-external-tests]
     if: ${{ needs.detect-changes.outputs.changed == 'true' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
     runs-on: ubuntu-latest
+
+    concurrency:
+      group: tag-${{ github.ref }}
+      cancel-in-progress: false
+
     steps:
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ACTIONS_PUSH_PAT }}
