--- a/.github/workflows/tunit-pipeline-external.yml
+++ b/.github/workflows/tunit-pipeline-external.yml
@@ -214,10 +214,15 @@ jobs:
     needs: [detect-changes, tunit-external-tests, tunit-real-external-tests]
     if: ${{ needs.detect-changes.outputs.changed == 'true' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
     runs-on: ubuntu-latest
+
+    concurrency:
+      group: tag-${{ github.ref }}
+      cancel-in-progress: false
+
     steps:
     - name: Bump version and push tag
       if: ${{ (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
       id: tag_version
       uses: mathieudutour/github-tag-action@v6.2
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.ACTIONS_PUSH_PAT }}
