--- a/.github/workflows/xunit-pipeline-external.yml
+++ b/.github/workflows/xunit-pipeline-external.yml
@@ -6,29 +6,30 @@ on:
     - cron: "0 2,8,14,20 * * *"
   push:
     paths:
-      - '.github/workflows/xunit-pipeline-external.yml'
-      - 'ExternalMerlin.XUnit/**'
-      - 'ExternalMerlin.XUnit.RealDevices/**'
+      - ".github/workflows/xunit-pipeline-external.yml"
+      - "ExternalMerlin.XUnit/**"
+      - "ExternalMerlin.XUnit.RealDevices/**"
     branches:
       - master
-      - 'releases/**'
-      - 'feat/**'
-      - 'feature/**'
-      - 'fix/**'
-      - 'test/**'
+      - "releases/**"
+      - "feat/**"
+      - "feature/**"
+      - "fix/**"
+      - "test/**"
   workflow_dispatch:
 
 env:
   PROJECT_NAME: Saucery
-  SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
-  EM_XUNIT_PROJECT: ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj                            # full path to xunit external integration test project file
-  EM_RD_XUNIT_PROJECT: ExternalMerlin.XUnit.RealDevices/ExternalMerlin.XUnit.RealDevices.csproj # full path to xunit external integration test project file
+  SOLN_FILE: Saucery.sln
+  EM_XUNIT_PROJECT: ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj
+  EM_RD_XUNIT_PROJECT: ExternalMerlin.XUnit.RealDevices/ExternalMerlin.XUnit.RealDevices.csproj
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CONFIG: Release
 
-  WATCHED_GLOBS: >
-    .github/workflows/xunit-pipeline-external.yml,
+  # IMPORTANT: literal block. One pattern per line. No folding surprises.
+  WATCHED_GLOBS: |
+    .github/workflows/xunit-pipeline-external.yml
     ExternalMerlin.XUnit/**
     ExternalMerlin.XUnit.RealDevices/**
 
@@ -54,7 +55,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const { owner, repo } = context.repo;
-            const branch = context.ref.replace('refs/heads/', '');  // e.g. "master"
+            const branch = context.ref.replace('refs/heads/', '');
             const workflow_id = ".github/workflows/xunit-pipeline-external.yml";
 
             const runs = await github.rest.actions.listWorkflowRuns({
@@ -75,16 +76,21 @@ jobs:
             let changed = "true";
             let pathsChanged = "true";
 
-            // Get watched globs from env (comma-separated)
+            // Parse WATCHED_GLOBS robustly:
+            // - allow newline-separated (recommended)
+            // - allow comma-separated
+            // - tolerate accidental whitespace blobs
             const raw = process.env.WATCHED_GLOBS || "";
             const watchedGlobs = raw
-              .split(",")
-              .map(x => x.trim())
-              .filter(x => x.length > 0);
+              .split(/[\n,]+/g)                 // split on newlines OR commas
+              .map(s => s.trim())
+              .filter(Boolean)
+              .flatMap(s => s.split(/\s+/g))    // if someone folded lines, split whitespace too
+              .map(s => s.trim())
+              .filter(Boolean);
 
             core.info(`WATCHED_GLOBS (parsed): [${watchedGlobs.join(", ")}]`);
 
-            // Very small glob matcher supporting '*' and '**'
             function globToRegexSource(pattern) {
               let out = "";
               for (let i = 0; i < pattern.length; i++) {
@@ -92,15 +98,15 @@ jobs:
                 if (ch === "*") {
                   const nextIsStar = i + 1 < pattern.length && pattern[i + 1] === "*";
                   if (nextIsStar) {
-                    out += ".*";  // '**' => any depth
-                    i++;          // skip second '*'
+                    out += ".*";
+                    i++;
                   } else {
-                    out += "[^/]*"; // '*' => any chars except '/'
+                    out += "[^/]*";
                   }
                 } else if (ch === "/") {
-                  out += "\\/"; // literal slash
+                  out += "\\/";
                 } else if ("\\.[]{}()+-?^$|".includes(ch)) {
-                  out += "\\" + ch; // escape regex special
+                  out += "\\" + ch;
                 } else {
                   out += ch;
                 }
@@ -109,27 +115,20 @@ jobs:
             }
 
             function matchesGlob(path, pattern) {
-              const source = globToRegexSource(pattern);
-              const regex = new RegExp("^" + source + "$");
+              const regex = new RegExp("^" + globToRegexSource(pattern) + "$");
               return regex.test(path);
             }
 
             if (!prevSha) {
-              // First time this workflow has completed on this branch
               core.info("No previous completed run for this workflow+branch. Treating as changed.");
-              if (watchedGlobs.length === 0) {
-                core.info("No watched globs defined; treating paths_changed as true.");
-                pathsChanged = "true";
-              } else {
-                core.info("First run: skipping path-based filtering and treating paths_changed as true.");
-                pathsChanged = "true";
-              }
+              // First run: always run downstream jobs (including schedule)
+              pathsChanged = "true";
+              changed = "true";
             } else if (prevSha === curSha) {
               core.info("No new commits since the last completed run on this branch.");
               changed = "false";
               pathsChanged = "false";
             } else {
-              // There are new commits; now see if watched paths changed.
               const comparison = await github.rest.repos.compareCommits({
                 owner,
                 repo,
@@ -164,10 +163,9 @@ jobs:
                 }
               }
 
-              // If we have a previous run and no watched paths changed, treat overall changed as false
-              // This guarantees downstream jobs won't run for commits that only touch other projects
+              // IMPORTANT: if watched paths didn't change, force overall skip
               if (pathsChanged === "false") {
-                core.info("No watched-path changes detected since previous run; marking overall changed as false to skip downstream jobs.");
+                core.info("No watched-path changes detected since previous run; marking overall changed as false.");
                 changed = "false";
               }
             }
@@ -181,40 +179,38 @@ jobs:
     if: ${{ needs.detect-changes.outputs.changed == 'true' }}
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
+      - name: Checkout Code
+        uses: actions/checkout@v5
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 10 download page (https://dotnet.microsoft.com/download/dotnet/10.0)
-        dotnet-version: 10.0.x
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: 10.0.x
 
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+      - name: Compile solution
+        run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run External XUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT_PROJECT }} --no-build
+      - name: Run External XUnit Integration Tests
+        run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT_PROJECT }} --no-build
 
   xunit-real-external-tests:
     needs: detect-changes
     if: ${{ needs.detect-changes.outputs.changed == 'true' }}
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
+      - name: Checkout Code
+        uses: actions/checkout@v5
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 10 download page (https://dotnet.microsoft.com/download/dotnet/10.0)
-        dotnet-version: 10.0.x
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: 10.0.x
 
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+      - name: Compile solution
+        run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run External XUnit Real Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT_PROJECT }} --no-build
+      - name: Run External XUnit Real Integration Tests
+        run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT_PROJECT }} --no-build
 
   tag:
     needs: [detect-changes, xunit-external-tests, xunit-real-external-tests]
