--- a/.github/workflows/xunit3-pipeline-external.yml
+++ b/.github/workflows/xunit3-pipeline-external.yml
@@ -213,12 +213,16 @@ jobs:
     needs: [detect-changes, xunit3-external-tests, xunit3-real-external-tests]
     if: ${{ needs.detect-changes.outputs.paths_changed == 'true' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     concurrency:
       group: tag-${{ github.ref }}
       cancel-in-progress: false
     steps:
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.ACTIONS_PUSH_PAT }}
+       - name: Bump version and push tag
+         id: tag_version
+         uses: mathieudutour/github-tag-action@v6.2
+         with:
+           github_token: ${{ secrets.ACTIONS_PUSH_PAT }}
