--- a/.github/workflows/core-pipeline.yml
+++ b/.github/workflows/core-pipeline.yml
@@ -16,7 +16,10 @@ on:
       - 'fix/**'
       - 'test/**'
       - 'bug/**'
-  workflow_dispatch:
+  workflow_dispatch: {}
+  schedule:
+    # Runs first day of the month at midnight UTC
+    - cron: "0 0 1 * *"
 
 run-name: ${{ github.event.head_commit.message || github.event.inputs.message || 'Manual Run' }}
 
