--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -40,6 +40,7 @@ env:
   TUNIT_INTEGRATION_COVERAGE_FILENAME: cobertura.tunit.integration.xml
   TUNIT_RD_INTEGRATION_COVERAGE_FILENAME: cobertura.tunit.realdevice.integration.xml
   COVERAGE_THRESHOLD: 80
+  BUILD_ARTIFACTS: build-artifacts
 
   # Newline-separated patterns (script splits on newline OR comma)
   WATCHED_GLOBS: |
@@ -190,7 +191,7 @@ jobs:
     if: needs.detect-changes.outputs.paths_changed == 'true'
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v5
@@ -214,17 +215,23 @@ jobs:
       - name: Run Template Tests
         run: dotnet run --project ${{ env.TT_PROJECT }} -- --treenode-filter '/*/*/*/*[Category=TUnit]'
 
-      - name: Display structure of downloaded files
-        run: ls -R
+
+      - name: Upload compiled artifacts
+        uses: actions/upload-artifact@v7
+        with:
+          name: ${{ env.BUILD_ARTIFACTS }}
+          path: |
+            **/bin/${{ env.CONFIG }}/**/
+            **/obj/
 
       - name: Upload TRX
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v7
         with:
           name: unit-test-trx
           path: ${{ env.COVERLET_DIR }}/unit.trx
 
       - name: Publish Unit Coverage Artifact
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v7
         with:
           name: unit-test-results
           path: ${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}
@@ -237,30 +244,58 @@ jobs:
     if: needs.build.result == 'success'
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: 10.0.x
 
-      - name: Compile solution
-        run: dotnet build -c ${{ env.CONFIG }}
+      - name: Download build artifacts
+        uses: actions/download-artifact@v8
+        with:
+          name: ${{ env.BUILD_ARTIFACTS }}
+          path: ${{ env.BUILD_ARTIFACTS }}   # restore bin/obj into a dedicated folder
 
-      - name: Run TUnit Integration Tests
+      - name: Find and run TUnit Integration Tests
+        shell: bash
         run: |
-          dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_TUNIT_PROJECT }} -- \
-          --coverage \
-          --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}" \
-          --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-          --results-directory "${{ env.COVERLET_DIR }}" \
-          --log-level Debug
+          set -euo pipefail
+          ART_DIR="${{ github.workspace }}/${{ env.BUILD_ARTIFACTS }}"
+          echo "Searching for runnable Merlin.TUnit.dll under $ART_DIR..."
+
+          DLL=""
+          while IFS= read -r CANDIDATE; do
+            DIR="$(dirname "$CANDIDATE")"
+            if [[ -f "$DIR/Merlin.TUnit.runtimeconfig.json" ]]; then
+              DLL="$CANDIDATE"
+              break
+            fi
+          done < <(find "$ART_DIR" -type f -name "Merlin.TUnit.dll" \
+                    ! -path "*/obj/*" ! -path "*/ref/*" -print)
+
+          if [[ -z "$DLL" ]]; then
+            echo "ERROR: runnable Merlin.TUnit.dll not found (no adjacent runtimeconfig)."
+            echo "All dll candidates:"
+            find "$ART_DIR" -type f -name "Merlin.TUnit.dll" -print || true
+            echo "All runtimeconfigs:"
+            find "$ART_DIR" -type f -name "Merlin.TUnit.runtimeconfig.json" -print || true
+            exit 1
+          fi
+
+          echo "Running $DLL"
+          dotnet "$DLL" \
+            --coverage \
+            --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}" \
+            --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
+            --results-directory "${{ env.COVERLET_DIR }}" \
+            --log-level Debug
 
       - name: Display structure of downloaded files
         run: ls -R
 
       - name: Publish Artifacts
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v7
         with:
           name: tunit-integration-test-results
           path: ${{ env.COVERLET_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
@@ -271,27 +306,55 @@ jobs:
     if: needs.build.result == 'success'
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: 10.0.x
 
-      - name: Compile solution
-        run: dotnet build -c ${{ env.CONFIG }}
+      - name: Download build artifacts
+        uses: actions/download-artifact@v8
+        with:
+          name: ${{ env.BUILD_ARTIFACTS }}
+          path: ${{ env.BUILD_ARTIFACTS }}   # restore bin/obj into a dedicated folder
 
-      - name: Run TUnit Real Integration Tests
+      - name: Find and run TUnit Real Integration Tests
+        shell: bash
         run: |
-          dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_RD_TUNIT_PROJECT }} -- \
-          --coverage \
-          --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}" \
-          --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-          --results-directory "${{ env.COVERLET_DIR }}" \
-          --log-level Debug
+          set -euo pipefail
+          ART_DIR="${{ github.workspace }}/${{ env.BUILD_ARTIFACTS }}"
+          echo "Searching for runnable Merlin.TUnit.RealDevices.dll under $ART_DIR..."
+
+          DLL=""
+          while IFS= read -r CANDIDATE; do
+            DIR="$(dirname "$CANDIDATE")"
+            if [[ -f "$DIR/Merlin.TUnit.RealDevices.runtimeconfig.json" ]]; then
+              DLL="$CANDIDATE"
+              break
+            fi
+          done < <(find "$ART_DIR" -type f -name "Merlin.TUnit.RealDevices.dll" \
+                    ! -path "*/obj/*" ! -path "*/ref/*" -print)
+
+          if [[ -z "$DLL" ]]; then
+            echo "ERROR: runnable Merlin.TUnit.RealDevices.dll not found (no adjacent runtimeconfig)."
+            echo "All dll candidates:"
+            find "$ART_DIR" -type f -name "Merlin.TUnit.RealDevices.dll" -print || true
+            echo "All runtimeconfigs:"
+            find "$ART_DIR" -type f -name "Merlin.TUnit.RealDevices.runtimeconfig.json" -print || true
+            exit 1
+          fi
+
+          echo "Running $DLL"
+          dotnet "$DLL" \
+            --coverage \
+            --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}" \
+            --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
+            --results-directory "${{ env.COVERLET_DIR }}" \
+            --log-level Debug
 
       - name: Publish Artifacts
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v7
         with:
           name: tunit-real-integration-test-results
           path: ${{ env.COVERLET_DIR }}/${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
@@ -308,7 +371,7 @@ jobs:
       ARTIFACT_DIR: artifacts
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v5
@@ -393,33 +456,81 @@ jobs:
     if: needs.tunit-integration-tests.result == 'success' && needs.tunit-real-integration-tests.result == 'success'
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Download unit-test results
-        uses: actions/download-artifact@v6
+        uses: actions/download-artifact@v8
         with:
           name: unit-test-results
+          path: ${{ env.COVERLET_DIR }}
 
       - name: Download tunit-integration-test results
-        uses: actions/download-artifact@v6
+        uses: actions/download-artifact@v8
         with:
           name: tunit-integration-test-results
+          path: ${{ env.COVERLET_DIR }}
 
       - name: Download tunit-real-integration-test results
-        uses: actions/download-artifact@v6
+        uses: actions/download-artifact@v8
         with:
           name: tunit-real-integration-test-results
+          path: ${{ env.COVERLET_DIR }}
 
       - name: ReportGenerator
         uses: danielpalme/ReportGenerator-GitHub-Action@5.5.0
         with:
-          reports: ${{ env.UNIT_COVERAGE_FILENAME }}
+          reports: '${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}'
           targetdir: coveragereport
           reporttypes: "HtmlInline;Cobertura"
 
       - name: Upload coverage report artifact
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v7
         if: ${{ always() }}
         with:
           name: CoverageReport
           path: coveragereport
+
+  cleanup-artifacts:
+    runs-on: ubuntu-latest
+    needs: [generate-report, publish-saucery-tunit]
+    if: ${{ always() }}
+    steps:
+      - name: Ensure jq is installed
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Delete ONLY build artifacts created by this run
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BUILD_ARTIFACTS: ${{ env.BUILD_ARTIFACTS }}
+        run: |
+          set -euo pipefail
+          echo "Listing repository artifacts..."
+          API="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/artifacts"
+
+          PAGE=1
+          while :; do
+            RESP=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" -H "Accept: application/vnd.github+json" "${API}?per_page=100&page=${PAGE}")
+            COUNT=$(echo "$RESP" | jq '.artifacts | length')
+            if [ "$COUNT" -eq 0 ]; then
+              break
+            fi
+
+            echo "$RESP" | jq -c '.artifacts[]' | while read -r ART; do
+              ART_ID=$(echo "$ART" | jq -r '.id')
+              ART_NAME=$(echo "$ART" | jq -r '.name')
+              RUN_ID=$(echo "$ART" | jq -r '.workflow_run.id // empty')
+
+              # Delete ONLY the build artifact for THIS run
+              if [ "$RUN_ID" = "$GITHUB_RUN_ID" ] && [ "$ART_NAME" = "$BUILD_ARTIFACTS" ]; then
+                echo "Deleting build artifact ${ART_NAME} (id=${ART_ID}) for run ${RUN_ID}"
+                curl -s -X DELETE \
+                  -H "Authorization: Bearer $GITHUB_TOKEN" \
+                  -H "Accept: application/vnd.github+json" \
+                  "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/artifacts/${ART_ID}"
+              fi
+            done
+
+            PAGE=$((PAGE+1))
+          done
+
+          echo "Cleanup complete."
