--- a/.github/workflows/core-pipeline.yml
+++ b/.github/workflows/core-pipeline.yml
@@ -694,7 +694,7 @@ jobs:
 
   cleanup-artifacts:
     runs-on: ubuntu-latest
-    needs: [xunit-integration-tests, nunit-integration-tests]
+    needs: [generate-report, publish-saucery-core]
     if: ${{ always() }}
     steps:
     - name: Ensure jq is installed
