--- a/.github/workflows/unit-test-comparison.yml
+++ b/.github/workflows/unit-test-comparison.yml
@@ -1,8 +1,9 @@
-name: TUnit Pipeline
+name: Unit Test Comparison
 
 on:
   push:
   pull_request:
+  workflow_dispatch:
 
 permissions:
   actions: write
@@ -11,13 +12,15 @@ permissions:
 env:
   ARTIFACT_NAME: build-artifacts
   BUILD_ARTIFACTS: ${{ github.workspace }}/build_artifacts
+  SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
+  SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
 
 jobs:
   build:
     name: Build and upload artifact
     runs-on: ubuntu-latest
     outputs:
-      artifact-name: ${{ env.ARTIFACT_NAME }}
+      artifact-name: build-artifacts
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,7 +33,7 @@ jobs:
       - name: Restore
         run: dotnet restore
 
-      - name: Build (Release)
+      - name: Build
         run: dotnet build --configuration Release --no-restore
 
       # Include project files and compiled outputs so downstream jobs can run without rebuilding.
@@ -42,12 +45,10 @@ jobs:
             **/*.csproj
             **/bin/Release/**
 
-  run-saucery-core-tests:
-    name: Run Saucery.Core.Tests (dotnet run)
+  run-tunit:
+    name: Run TUnit Tests
     needs: build
     runs-on: ubuntu-latest
-    env:
-      BUILD_ARTIFACTS: ${{ env.BUILD_ARTIFACTS }}
     steps:
       - name: Create artifact folder
         run: mkdir -p "${{ env.BUILD_ARTIFACTS }}"
@@ -61,24 +62,55 @@ jobs:
       - name: Locate Saucery.Core.Tests project
         run: |
           set -e
-          if [ -f "${{ env.BUILD_ARTIFACTS }}/Saucery.Core.Tests/Saucery.Core.Tests.csproj" ]; then
-            echo "Found project at Saucery.Core.Tests"
+          EXPECTED="${{ env.BUILD_ARTIFACTS }}/Saucery.Core.Tests/Saucery.Core.Tests.csproj"
+          if [ -f "$EXPECTED" ]; then
+            echo "Found project at expected path: $EXPECTED"
+            PROJECT_PATH="$EXPECTED"
           else
-            echo "Project Saucery.Core.Tests not found at expected path: ${{ env.BUILD_ARTIFACTS }}/Saucery.Core.Tests/Saucery.Core.Tests.csproj"
-            ls -la "${{ env.BUILD_ARTIFACTS }}" || true
+            echo "Expected path not present, searching under ${{ env.BUILD_ARTIFACTS }}..."
+            PROJECT_PATH=$(find "${{ env.BUILD_ARTIFACTS }}" -type f -name "Saucery.Core.Tests.csproj" -print -quit || true)
+            if [ -n "$PROJECT_PATH" ]; then
+              echo "Found project at: $PROJECT_PATH"
+            else
+              echo "Project Saucery.Core.Tests not found under ${{ env.BUILD_ARTIFACTS }}"
+              ls -la "${{ env.BUILD_ARTIFACTS }}" || true
+              exit 2
+            fi
+          fi
+          echo "Using project: $PROJECT_PATH"
+          echo "PROJECT_PATH=$PROJECT_PATH" >> $GITHUB_ENV
+
+      - name: Run TUnit Tests
+        run: |
+          set -e
+          PROJECT_PATH="${{ env.PROJECT_PATH }}"
+          OUT_ROOT="$(dirname "$PROJECT_PATH")/bin/Release"
+          EXE_PATH=$(find "$OUT_ROOT" -type f -name "Saucery.Core.Tests" -print -quit || true)
+          DLL_PATH=$(find "$OUT_ROOT" -type f -name "Saucery.Core.Tests.dll" -print -quit || true)
+
+          if [ -n "$EXE_PATH" ]; then
+            echo "Native executable found: $EXE_PATH"
+            chmod +x "$EXE_PATH"
+            BIN_DIR="$(dirname "$EXE_PATH")"
+          elif [ -n "$DLL_PATH" ]; then
+            echo "DLL found: $DLL_PATH"
+            BIN_DIR="$(dirname "$DLL_PATH")"
+          else
+            echo "No built test output found under $OUT_ROOT"
+            ls -la "$OUT_ROOT" || true
             exit 2
           fi
 
-      - name: Execute Saucery.Core.Tests with dotnet run (no build)
-        run: |
-          dotnet run --project "${{ env.BUILD_ARTIFACTS }}/Saucery.Core.Tests/Saucery.Core.Tests.csproj" --configuration Release --no-build
+          echo "Changing working directory to: $BIN_DIR"
+          cd "$BIN_DIR"
+
+          echo "Running tests with dotnet run (project: $PROJECT_PATH)"
+          dotnet run --project "$PROJECT_PATH" --configuration Release --no-build
 
   test-xunit:
-    name: Run Saucery.Core.Tests.XUnit (dotnet test)
-    needs: build
+    name: Run XUnit Tests
+    needs: run-tunit
     runs-on: ubuntu-latest
-    env:
-      BUILD_ARTIFACTS: ${{ env.BUILD_ARTIFACTS }}
     steps:
       - name: Create artifact folder
         run: mkdir -p "${{ env.BUILD_ARTIFACTS }}"
@@ -91,20 +123,30 @@ jobs:
 
       - name: Run Saucery.Core.Tests.XUnit with dotnet test (no build)
         run: |
-          PROJECT_PATH="${{ env.BUILD_ARTIFACTS }}/Saucery.Core.Tests.XUnit/Saucery.Core.Tests.XUnit.csproj"
-          if [ ! -f "$PROJECT_PATH" ]; then
-            echo "Project not found: $PROJECT_PATH"
-            ls -la "${{ env.BUILD_ARTIFACTS }}" || true
+          set -e
+          ART_DIR="${{ env.BUILD_ARTIFACTS }}"
+          EXPECTED="$ART_DIR/Saucery.Core.Tests.XUnit/Saucery.Core.Tests.XUnit.csproj"
+          if [ -f "$EXPECTED" ]; then
+            PROJECT_PATH="$EXPECTED"
+          else
+            echo "Expected path not present, searching under $ART_DIR..."
+            ls -la "$ART_DIR" || true
+            PROJECT_PATH=$(find "$ART_DIR" -type f -name "Saucery.Core.Tests.XUnit.csproj" -print -quit || true)
+          fi
+
+          if [ -z "$PROJECT_PATH" ]; then
+            echo "Project not found: $ART_DIR"
+            ls -la "$ART_DIR" || true
             exit 2
           fi
+
+          echo "Running dotnet test on: $PROJECT_PATH"
           dotnet test "$PROJECT_PATH" --configuration Release --no-build --nologo
 
   test-xunitv3:
-    name: Run Saucery.Core.Tests.XUnitv3 (dotnet test)
-    needs: build
+    name: Run XUnitv3 Tests
+    needs: test-xunit
     runs-on: ubuntu-latest
-    env:
-      BUILD_ARTIFACTS: ${{ env.BUILD_ARTIFACTS }}
     steps:
       - name: Create artifact folder
         run: mkdir -p "${{ env.BUILD_ARTIFACTS }}"
@@ -117,20 +159,30 @@ jobs:
 
       - name: Run Saucery.Core.Tests.XUnitv3 with dotnet test (no build)
         run: |
-          PROJECT_PATH="${{ env.BUILD_ARTIFACTS }}/Saucery.Core.Tests.XUnitv3/Saucery.Core.Tests.XUnitv3.csproj"
-          if [ ! -f "$PROJECT_PATH" ]; then
-            echo "Project not found: $PROJECT_PATH"
-            ls -la "${{ env.BUILD_ARTIFACTS }}" || true
+          set -e
+          ART_DIR="${{ env.BUILD_ARTIFACTS }}"
+          EXPECTED="$ART_DIR/Saucery.Core.Tests.XUnitv3/Saucery.Core.Tests.XUnitv3.csproj"
+          if [ -f "$EXPECTED" ]; then
+            PROJECT_PATH="$EXPECTED"
+          else
+            echo "Expected path not present, searching under $ART_DIR..."
+            ls -la "$ART_DIR" || true
+            PROJECT_PATH=$(find "$ART_DIR" -type f -name "Saucery.Core.Tests.XUnitv3.csproj" -print -quit || true)
+          fi
+
+          if [ -z "$PROJECT_PATH" ]; then
+            echo "Project not found: $ART_DIR"
+            ls -la "$ART_DIR" || true
             exit 2
           fi
+
+          echo "Running dotnet test on: $PROJECT_PATH"
           dotnet test "$PROJECT_PATH" --configuration Release --no-build --nologo
 
   test-nunit:
-    name: Run Saucery.Core.Tests.NUnit (dotnet test)
-    needs: build
+    name: Run NUnit Tests
+    needs: test-xunitv3
     runs-on: ubuntu-latest
-    env:
-      BUILD_ARTIFACTS: ${{ env.BUILD_ARTIFACTS }}
     steps:
       - name: Create artifact folder
         run: mkdir -p "${{ env.BUILD_ARTIFACTS }}"
@@ -143,42 +195,21 @@ jobs:
 
       - name: Run Saucery.Core.Tests.NUnit with dotnet test (no build)
         run: |
-          PROJECT_PATH="${{ env.BUILD_ARTIFACTS }}/Saucery.Core.Tests.NUnit/Saucery.Core.Tests.NUnit.csproj"
-          if [ ! -f "$PROJECT_PATH" ]; then
-            echo "Project not found: $PROJECT_PATH"
-            ls -la "${{ env.BUILD_ARTIFACTS }}" || true
+          set -e
+          ART_DIR="${{ env.BUILD_ARTIFACTS }}"
+          EXPECTED="$ART_DIR/Saucery.Core.Tests.NUnit/Saucery.Core.Tests.NUnit.csproj"
+          if [ -f "$EXPECTED" ]; then
+            PROJECT_PATH="$EXPECTED"
+          else
+            echo "Expected path not present, searching under $ART_DIR..."
+            ls -la "$ART_DIR" || true
+            PROJECT_PATH=$(find "$ART_DIR" -type f -name "Saucery.Core.Tests.NUnit.csproj" -print -quit || true)
+          fi
+
+          if [ -z "$PROJECT_PATH" ]; then
+            echo "Project not found: $ART_DIR"
+            ls -la "$ART_DIR" || true
             exit 2
           fi
-          dotnet test "$PROJECT_PATH" --configuration Release --no-build --nologo
 
-  cleanup:
-    name: Cleanup build artifact for this run
-    needs:
-      - run-saucery-core-tests
-      - test-xunit
-      - test-xunitv3
-      - test-nunit
-    runs-on: ubuntu-latest
-    if: always()
-    env:
-      REPO: ${{ github.repository }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      ARTIFACT_NAME: ${{ env.ARTIFACT_NAME }}
-    steps:
-      - name: Install jq (if missing)
-        run: |
-          if ! command -v jq >/dev/null 2>&1; then
-            sudo apt-get update && sudo apt-get install -y jq
-          fi
-
-      - name: List artifacts and delete those named "${{ env.ARTIFACT_NAME }}"
-        run: |
-          set -e
-          echo "Listing artifacts for repository: $REPO"
-          ARTIFACTS_JSON=$(curl -s -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$REPO/actions/artifacts")
-          echo "$ARTIFACTS_JSON" | jq -r '.artifacts[] | select(.name == env.ARTIFACT_NAME) | .id' --arg ARTIFACT_NAME "${ARTIFACT_NAME}" | while read -r id; do
-            if [ -n "$id" ]; then
-              echo "Deleting artifact id: $id"
-              curl -s -X DELETE -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$REPO/actions/artifacts/$id"
-            fi
-          done || echo "No artifacts named ${ARTIFACT_NAME} found or deletion completed."
+          echo "Running doten
